--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 framework = arduino
 board = esp32-8048S043C
 build_flags = -D LV_LVGL_H_INCLUDE_SIMPLE
+  -D LV_CONF_INCLUDE_SIMPLE
 monitor_speed = 115200
 lib_deps = 
 	bodmer/JPEGDecoder@^2.0.0
